--- a/theme.css
+++ b/theme.css
@@ -2370,16 +2370,16 @@ div#itemDetailPage {
 
 .layout-tv .detailSection {
   background-color: #000000de;
-  border-radius: 105px;
+  border-radius: 8px;
   margin-left: -30vw;
   margin-top: -50vh;
   padding: 10vh 2vw 2vh 30vw;
-  width: 44vw !important;
+  width: fit-content;
 }
 
 .layout-desktop .detailSection {
   background-color: #000000de;
-  border-radius: 105px;
+  border-radius: 8px;
   margin-left: -30vw;
   margin-top: -10vh;
   padding: 10vh 2vw 2vh 30vw;
