--- a/theme.css
+++ b/theme.css
@@ -85,7 +85,7 @@ progress {
 
 .layout-tv #itemDetailPage .emby-button::after,
 .layout-tv .raised::after {
-  transition: transform .275s, visiblity 0s .275s
+  transition: transform .275s, visiblity 0 .275s
 }
 
 .layout-tv #itemDetailPage .emby-button::after {
@@ -1613,7 +1613,7 @@ body:not(.withSectionTabs)>.skinHeader {
 }
 
 .cardOverlayContainer {
-  background-color: rgb(0, 0, 0/4%) !important;
+  background-color: #000 !important;
   border-radius: 5px 5px 0 0 !important
 }
 
@@ -1966,8 +1966,6 @@ div:not(.paperList) .listItem {
   padding: 0 !important
 }
 
-div:not(.sectionTitleContainer-cards)>.sectionTitle-cards {}
-
 @media (max-width:1291px) {
   .dashboardSections {
     grid-template-areas: one two three
@@ -2313,11 +2311,8 @@ div#itemDetailPage {
 }
 
 .layout-tv .nextUpSection.verticalSection.detailVerticalSection {
-  margin-left: 70vw;
   z-index: 10 !important;
-  margin-top: -74vh;
-  margin-bottom: 40vh !important;
-  margin-right: -100vw !important
+  margin: -74vh -100vw 40vh 70vw !important
 }
 
 .layout-tv .itemsContainer-tv>.overflowBackdropCard {
